--- a/OSMImporter/OSMImporter.csproj
+++ b/OSMImporter/OSMImporter.csproj
@@ -51,6 +51,63 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Hebesätze der Gemeinden\Hebesätze der Gemeinden_1995.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Hebesätze der Gemeinden\Hebesätze der Gemeinden_1996.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Hebesätze der Gemeinden\Hebesätze der Gemeinden_1997.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Hebesätze der Gemeinden\Hebesätze der Gemeinden_1998.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Hebesätze der Gemeinden\Hebesätze der Gemeinden_1999.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Hebesätze der Gemeinden\Hebesätze der Gemeinden_2000.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Hebesätze der Gemeinden\Hebesätze der Gemeinden_2001.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Hebesätze der Gemeinden\Hebesätze der Gemeinden_2002.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Hebesätze der Gemeinden\Hebesätze der Gemeinden_2003.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Hebesätze der Gemeinden\Hebesätze der Gemeinden_2004.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Hebesätze der Gemeinden\Hebesätze der Gemeinden_2005.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Hebesätze der Gemeinden\Hebesätze der Gemeinden_2006.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Hebesätze der Gemeinden\Hebesätze der Gemeinden_2007.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Hebesätze der Gemeinden\Hebesätze der Gemeinden_2008.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Hebesätze der Gemeinden\Hebesätze der Gemeinden_2009.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Hebesätze der Gemeinden\Hebesätze der Gemeinden_2010.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Hebesätze der Gemeinden\Hebesätze der Gemeinden_2011.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Hebesätze der Gemeinden\Hebesätze der Gemeinden_2012.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Hebesätze der Gemeinden\Hebesätze der Gemeinden_2013.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="jod-official-pubring.gpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
